--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,8 @@
 
 # Site settings
 title: howtoguy.tv
-email: glen@howtoguy.tv
+email: glen@magnamous.com
+theme: jekyll-theme-slate
 description: > # this means to ignore newlines until "baseurl:"
   Howtoguy knows everything. Howtoguy can teach you how to do anything. Need to know how to test and replace a condensor on a '77 Kawasaki 650 motorcycle or build a wordpress website? Howtoguy has you covered.
 baseurl: "" # the subpath of your site, e.g. /blog
