--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: howtoguy.tv
 email: glen@magnamous.com
 theme: jekyll-theme-dinky
 description: > # this means to ignore newlines until "baseurl:"
-  Howtoguy knows everything. Howtoguy can teach you how to do anything. Need to know how to test and replace a condensor on a '77 Kawasaki 650 motorcycle or build a wordpress website? Howtoguy has you covered.
+  Howtoguy knows everything. Howtoguy can teach you how to do anything. Need to know how to test and replace a condensor on a '77 Kawasaki 650 motorcycle or build a wordpress website? Howtoguy has you covered. Birds.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "howtoguy.github.io" # the base hostname & protocol for your site
 twitter_username: fotozfotoz
